# sqrt-chan

./: Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0162c58b6b87_initial_models.py  242bd783181a_initial_models.py  2d8c93c4047a_initial_models.py  824b61c17c6e_initial_models.py  e6c431863209_initial_models.py
backend/: main.py
backend/sqrt_chan/app/: decorators.py  logger.py
backend/sqrt_chan/app/database/: database.py  db.py
backend/sqrt_chan/app/models/: __init__.py  base.py  board.py  post.py  thread.py
backend/sqrt_chan/app/repository/: base_repo.py  board_repo.py  post_repo.py  thread_repo.py
backend/sqrt_chan/app/schemas/: board.py  post.py  role.py  thread.py
backend/sqrt_chan/app/utils/: decorators.py  hash.py  role.py  session.py  token.py
backend/sqrt_chan/controller/: board_controller.py  post_controller.py  role_contrellor.py  router.py  thread_controller.py
backend/sqrt_chan/controller/routers/: board_controller.py
backend/sqrt_chan/core/: config.py
backend/sqrt_chan/service/: board_service.py  post_service.py  thread_service.py
