[project]
name = "sqrt-chan"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.3",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asyncpg==0.31.0",
    "black==26.1.0",
    "build==1.4.0",
    "cachecontrol==0.14.4",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "cleo==2.1.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "crashtest==0.4.1",
    "distlib==0.4.0",
    "dulwich==1.0.0",
    "fastapi==0.128.5",
    "fastjsonschema==2.21.2",
    "filelock==3.20.3",
    "findpython==0.7.1",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "installer==0.7.0",
    "isort==7.0.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "keyring==25.7.0",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "mypy-extensions==1.1.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pbs-installer==2026.1.27",
    "pkginfo==1.12.1.2",
    "platformdirs==4.5.1",
    "poetry-core==2.3.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.11.0",
    "pyproject-hooks==1.2.0",
    "python-dotenv==1.2.1",
    "python-slugify==8.0.4",
    "pytokens==0.4.1",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.46",
    "starlette==0.52.1",
    "text-unidecode==1.3",
    "tomlkit==0.14.0",
    "trove-classifiers==2026.1.14.14",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "virtualenv==20.36.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "zstandard==0.25.0",
]
